fix about buttons again

--- a/public/about.html
+++ b/public/about.html
@@ -202,7 +202,7 @@
                         <div class="card-body px-5 pb-5 text-center">
                             <h4 class="mb-4">Trai&shy;ning Sess&shy;ions</h4>
                             <p class="mb-4">We provide training to our members on topics ranging in scope, from Lego Mindstorms to IoT.</p>
-                            <a href="why.html#training-sessions" class="btn btn-secondary custom-btn">
+                            <a href="https://pravinrram.github.io/Y1S1-UXDWD-CCA-Webpage-Assignment_NYP-Robotics/public/why.html#training-sessions" class="btn btn-secondary custom-btn">
                                 Learn more
                                 <img src="../src/assets/icons/up_arrow.svg" class="what-we-do-arrow ms-2">
                             </a>
@@ -215,7 +215,7 @@
                         <div class="card-body px-5 pb-5 text-center">
                             <h4 class="mb-4">Proj&shy;ects</h4>
                             <p class="mb-4">Take part in club-wide projects run by the projects subcom, where you can let your skills shine & boost your portfolio.</p>
-                            <a href="why.html#projects" class="btn btn-secondary custom-btn">
+                            <a href="https://pravinrram.github.io/Y1S1-UXDWD-CCA-Webpage-Assignment_NYP-Robotics/public/why.html#projects" class="btn btn-secondary custom-btn">
                                 Learn more
                                 <img src="../src/assets/icons/up_arrow.svg" class="what-we-do-arrow ms-2">
                             </a>
@@ -228,7 +228,7 @@
                         <div class="card-body px-5 pb-5 text-center">
                             <h4 class="mb-4">Competi&shy;tions</h4>
                             <p class="mb-4">We participate in competitions of varying robotics skills, from line-tracing to drone swarms.</p>
-                            <a href="why.html#competitions" class="btn btn-secondary custom-btn">
+                            <a href="https://pravinrram.github.io/Y1S1-UXDWD-CCA-Webpage-Assignment_NYP-Robotics/public/why.html#competitions" class="btn btn-secondary custom-btn">
                                 Learn more
                                 <img src="../src/assets/icons/up_arrow.svg" class="what-we-do-arrow ms-2">
                             </a>
@@ -241,7 +241,7 @@
                         <div class="card-body px-5 pb-5 text-center">
                             <h4 class="mb-4">Volunt&shy;eering</h4>
                             <p class="mb-4">Use skills gained and apply them in real-world contexts to improve ordinary people's lives.</p>
-                            <a href="why.html#volunteering" class="btn btn-secondary custom-btn">
+                            <a href="https://pravinrram.github.io/Y1S1-UXDWD-CCA-Webpage-Assignment_NYP-Robotics/public/why.html#volunteering" class="btn btn-secondary custom-btn">
                                 Learn more
                                 <img src="../src/assets/icons/up_arrow.svg" class="what-we-do-arrow ms-2">
                             </a>
@@ -254,7 +254,7 @@
                         <div class="card-body px-5 pb-5 text-center">
                             <h4 class="mb-4">Events</h4>
                             <p class="mb-4">Help organise engaging events for non-members to teach them about topics in robotics you're passionate about.</p>
-                            <a href="why.html#events" class="btn btn-secondary custom-btn">
+                            <a href="https://pravinrram.github.io/Y1S1-UXDWD-CCA-Webpage-Assignment_NYP-Robotics/public/why.html#events" class="btn btn-secondary custom-btn">
                                 Learn more
                                 <img src="../src/assets/icons/up_arrow.svg" class="what-we-do-arrow ms-2">
                             </a>
@@ -341,7 +341,7 @@
             <div class="row mb-3 content position-relative container-fluid">
                 <div class="col-md-3">
                     <p class="fs-4 mb-4">Find out more about their roles here!</p>
-                    <a href="why.html#leadership" class="btn custom-btn btn-primary mb-4">Leadership Roles</a>
+                    <a href="https://pravinrram.github.io/Y1S1-UXDWD-CCA-Webpage-Assignment_NYP-Robotics/public/why.html#leadership" class="btn custom-btn btn-primary mb-4">Leadership Roles</a>
                 </div>
                 <div class="col-md-4"></div>
                 <div class="col-md-5 justify-content-end">
